added login and signup forms and connected with database